# brightpath

./: .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  release.yml
brightpath/: __init__.py  brightway.py  bwconverter.py  capabilities.py  catalogs.py  cli.py  converter.py  exceptions.py  models.py  normalization.py  simapro.py  simaproconverter.py  units.py  utils.py
brightpath/adapters/: __init__.py  base.py  builtins.py  preflight.py  registry.py
brightpath/analysis/: __init__.py  analyzer.py
brightpath/background/: __init__.py  catalogs.py  execution.py  migration.py  validation.py
brightpath/core/: __init__.py  audit.py  context.py  pipeline.py  policies.py  reports.py  schema.py
brightpath/data/export/: correspondence_biosphere_flows.yaml  ecoinvent_to_uvek_mapping.csv  ei_transport.csv  simapro-biosphere.json  simapro_ei_exceptions.yaml  simapro_fields.yaml  simapro_headers.yaml  simapro_to_brightway_biosphere_ei310.yaml  simapro_units.yaml  uvek_blacklist.yaml  uvek_conversion_factors.yaml  waste_exchange_names.yaml
brightpath/data/export/reference_catalogs/: ATTRIBUTION.md  RESOURCE_MANIFEST.json  ecoinvent__3.6__consequential.json  ecoinvent__3.6__cutoff.json  ecoinvent__3.7__consequential.json  ecoinvent__3.8__consequential.json  uvek__2025__cutoff.json
brightpath/data/migrations/: ATTRIBUTION.md  RESOURCE_MANIFEST.json
brightpath/data/migrations/ecoinvent/biosphere/: ecoinvent-3.10-biosphere-ecoinvent-3.11-biosphere.json  ecoinvent-3.11-biosphere-ecoinvent-3.12-biosphere.json  ecoinvent-3.5-biosphere-ecoinvent-3.6-biosphere.json  ecoinvent-3.6-biosphere-ecoinvent-3.7-biosphere.json  ecoinvent-3.7-biosphere-ecoinvent-3.8-biosphere.json  ecoinvent-3.8-biosphere-ecoinvent-3.9-biosphere.json  ecoinvent-3.9-biosphere-ecoinvent-3.10-biosphere.json
brightpath/data/migrations/ecoinvent/cutoff/: ecoinvent-3.8-cutoff-ecoinvent-3.9-cutoff.json  ecoinvent-3.9-cutoff-ecoinvent-3.10-cutoff.json
brightpath/data/migrations/uvek/: ecoinvent-to-uvek-2025-placeholder.json
brightpath/formats/: __init__.py  brightway_delimited.py  brightway_excel.py  simapro_csv.py
brightpath/migrations/: __init__.py  engine.py  models.py  resources.py
brightpath/profiles/: __init__.py  simapro.py
brightpath/validation/: __init__.py  brightway.py
conda/: meta.yaml
dev/: ESA_1.1.8-ei-3.5_migration.json  SSSD-ei-3.9_migration.json  Untitled.ipynb  diagnose_ei310_biosphere_links.py  ecoinvent-3.9.1-biosphere-ecoinvent-3.10-biosphere.json  ecoinvent-3.9.1-cutoff-ecoinvent-3.10-cutoff.json  import_BAFU_datasets.ipynb  import_ESA_1.1.8_database.ipynb  import_ESA_1.2.0f_database.ipynb  import_Strathclyde_database.ipynb  import_ei310_si_wafer_to_brightway.py  meta_sample.yaml  sample.xlsx  simapro_10-06-2023
dev/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
docs/: api.rst  architecture.rst  concepts.rst  conf.py  format-profile-refactor.md  getting-started.rst  index.rst  limitations.rst  requirements.txt
docs/_static/: custom.css
docs/adr/: 0001-context-and-pipeline.rst  0002-strict-loss-and-migration-policy.rst  0003-catalog-and-resource-governance.rst  index.rst
docs/workflows/: analysis.rst  brightway.rst  cli.rst  conversion.rst  migration.rst  simapro.rst  validation.rst
premise/: __init__.py
scripts/: enrich_biosphere_migration_sources.py  generate_catalog_manifest.py  generate_migration_manifest.py  generate_reference_catalogs.py  generate_uvek_migration_resources.py
tests/: test_adapter_registry.py  test_analysis.py  test_api_consistency.py  test_background_migration_execution.py  test_background_migration_planner.py  test_background_providers.py  test_background_validation.py  test_biosphere_migration_sources.py  test_biosphere_resolution.py  test_brightway_delimited.py  test_brightway_inventory.py  test_builtin_adapters.py  test_bwconverter.py  test_capabilities.py  test_catalog_manifest.py  test_catalogs.py  test_cli.py  test_conversion_preflight.py  test_core_audit.py  test_core_context_schema.py  test_core_pipeline.py  test_core_reports.py  test_exceptions.py  test_facade_migration.py  test_lightweight_migration.py  test_migration_manifest.py  test_migrations.py  test_regressions.py  test_simapro_biosphere_context.py  test_simapro_inventory.py  test_simapro_profiles.py  test_simaproconverter.py  test_utils.py  test_uvek_migration_resources.py
