[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brightpath"
version = "1.0.0"
description = "Validate, migrate, and exchange life-cycle inventory data across LCA formats."
dynamic = ["dependencies"]
authors = [
    { name = "Romain Sacchi", email = "romain.sacchi@psi.ch" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9,<3.12"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization"
]
urls = {"Homepage" = "https://github.com/polca/brightpath"}

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "Sphinx>=7.2,<9",
]
dev = [
    "bandit",
    "black",
    "build",
    "isort",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["brightpath*"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", "dev", "examples"]
